# f-stack

./: config.ini  start.sh
dpdk/config/: rte_config.h
dpdk/drivers/mempool/: meson.build
dpdk/drivers/mempool/unimsg/: meson.build  ring.h  rte_mempool_unimsg.c
dpdk/lib/mbuf/: rte_mbuf.c  rte_mbuf.h
dpdk/lib/mempool/: rte_mempool.c
example/: Makefile  main.c  main_sctp.c  main_udp.c  sctp_client.c  sctp_client_epoll.c  sctp_server.c
freebsd/kern/: kern_kthread.c  uipc_mbuf.c  uipc_socket.c  uipc_syscalls.c
freebsd/net/: if_ethersubr.c
freebsd/netinet/: sctp_bsd_addr.c  sctp_indata.c  sctp_input.c  sctp_output.c  sctp_pcb.c  sctp_usrreq.c  sctputil.c  tcp_output.c
lib/: Makefile  ff_api.h  ff_dpdk_if.c  ff_dpdk_if.h  ff_glue.c  ff_init.c  ff_syscall_wrapper.c  ff_veth.c
mk/: kern.pre.mk
