# SPDX-License-Identifier: BSD-3-Clause
# Copyright(c) 2017 Intel Corporation

drivers = [
        'bucket',
        'cnxk',
        'dpaa',
        'dpaa2',
        'octeontx',
        'octeontx2',
        'ring',
        'stack',
        'unimsg',
]

std_deps = ['mempool']

log_prefix = 'mempool'
